--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   },
   "author": "zhangqiang",
   "license": "ISC",
-  "bundleDependencies": [],
   "dependencies": {
-    "@airiot/sdk-nodejs": "^4.4.7",
-    "node-schedule": "^2.1.1"
+    "@airiot/sdk-nodejs": "^4.4.20",
+    "mqtt": "^5.7.0",
+    "node-schedule": "^2.1.1",
+    "rc": "^1.2.8"
   },
   "deprecated": false,
   "description": "AirIot开发例子",
